# EtaZero

./: README.md  agent.py  agent_timer.py  arena.py  dgl_value_win_network.py  human.py  main.py  pyproject.toml  renderer.py  scripts.py  sevn.py  trainer.py  tree_search.py  utils.py
agent_evaluation/: arena.py
agents/: agent.py  eta_zero.py  human.py  mcts_agent.py  network_agent.py  random_agent.py  uct_agent.py
elo/: ratings.csv  ratings.json
ios_screen_capture/: screen_parser.py
models/: DGLValueWinNetwork-1-2021-01-04-18-21-32.pt  DGLValueWinNetwork-1-2021-01-18-22-24-57.pt  DGLValueWinNetwork-10-2021-01-08-15-22-47.pt  DGLValueWinNetwork-2-2021-01-05-01-47-57.pt  DGLValueWinNetwork-2-2021-01-14-23-52-24.pt  DGLValueWinNetwork-3-2021-01-05-21-37-22.pt  DGLValueWinNetwork-3-2021-01-15-14-31-04.pt  DGLValueWinNetwork-5-2021-01-06-15-54-02.pt  DGLValueWinNetwork-6-2021-01-06-21-30-58.pt  DGLValueWinNetwork-6-2021-01-19-20-54-17.pt  DGLValueWinNetwork-7-2021-01-07-04-08-31.pt  DGLValueWinNetwork-7-2021-01-20-09-37-35.pt  DGLValueWinNetwork-8-2021-01-20-18-26-36.pt  DGLValueWinNetwork-9-2021-01-21-03-08-04.pt  PolicyValRGCN-10-2021-01-26-09-04-08.pt  PolicyValRGCN-11-2021-01-26-09-44-45.pt  PolicyValRGCN-12-2021-01-26-10-25-16.pt  PolicyValRGCN-13-2021-01-26-11-06-57.pt  PolicyValRGCN-14-2021-01-26-11-47-35.pt  PolicyValRGCN-15-2021-01-26-13-45-20.pt  PolicyValRGCN-21-2021-01-26-22-24-10.pt  PolicyValRGCN-22-2021-01-26-23-35-07.pt  PolicyValRGCN-24-2021-01-27-01-57-22.pt  PolicyValRGCN-25-2021-01-27-03-01-12.pt  PolicyValRGCN-3-2021-01-26-03-40-55.pt  (+31 more)
(+438 files in other folders)
